--- a/momentum/index.html
+++ b/momentum/index.html
@@ -7,12 +7,12 @@
 
     <link rel="stylesheet" href="style.css" />
 
-    <title>Momemtum</title>
+    <title>Momemtum App</title>
   </head>
 
   <body>
     <div class="hello">
-      <h1>Grab me!</h1>
+      <h1>Click me!</h1>
     </div>
     <script src="app.js"></script>
   </body>
