--- a/momentum/index.html
+++ b/momentum/index.html
@@ -11,9 +11,16 @@
   </head>
 
   <body>
-    <div class="hello">
-      <h1>Click me!</h1>
-    </div>
+    <form id="login-form">
+      <input
+        required
+        maxlength="15"
+        type="text"
+        placeholder="What is your name?"
+      />
+      <button>Log In</button>
+    </form>
+
     <script src="app.js"></script>
   </body>
 </html>
