--- a/momentum/index.html
+++ b/momentum/index.html
@@ -20,7 +20,7 @@
       />
       <button>Log In</button>
     </form>
-
+    <a href="https://nomadcoders.co">Go to courses</a>
     <script src="app.js"></script>
   </body>
 </html>
