--- a/momentum/index.html
+++ b/momentum/index.html
@@ -11,7 +11,7 @@
   </head>
 
   <body>
-    <form id="login-form">
+    <form id="login-form" class="hidden">
       <input
         required
         maxlength="15"
