--- a/momentum/index.html
+++ b/momentum/index.html
@@ -6,8 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="stylesheet" href="css/style.css" />
-
     <title>Momemtum App</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Aboreto&family=Hahmlet:wght@400;500;600;700&family=Noto+Serif+KR:wght@400;600;900&family=Roboto&family=Silkscreen&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
@@ -25,9 +28,11 @@
     <form id="todo-form">
       <input type="text" placeholder="Write a To Do and Press Enter" required />
     </form>
-    <ul id="todo-list"></ul>
+    <div class="todo-wrap">
+      <ul id="todo-list"></ul>
+    </div>
     <div id="quote">
-      <span></span>
+      <span></span> <br />
       <span></span>
     </div>
     <div id="weather">
